--- a/landing-page.css
+++ b/landing-page.css
@@ -1,6 +1,8 @@
 .column {
-    width: 300px;
-    float:left
+    width: 600px;
+ /* float: left; */
+    margin: 0 auto;
+    padding: 2rem 0;
 }
 
 h2 {
@@ -12,11 +14,11 @@ p {
 }
 
 header {
-    margin-bottom: 4rem;
+    margin-bottom: 1rem;
     padding: 2rem 0;
-    background-color: rgb(241, 179, 0);
-    border-bottom: 4px solid rgb(0, 51, 102);
-    color: rgb(0, 51, 102);
+    background-color: rgb(0, 51, 102);
+    border-bottom: 4px solid rgb(241, 179, 0);
+    color: rgb(255, 255, 255);
 }
 
 .content-width {
@@ -24,3 +26,31 @@ header {
     width: calc(100% - 4rem);
     margin: 0 auto;
 }
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .accordion:hover {
+    background-color: #ccc;
+  }
+  
+  /* Style the accordion panel. Note: hidden by default */
+  .panel {
+    width: 550px;
+    float:left;
+    padding: 0 15px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
