--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -5,6 +5,9 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+------------------------------------------------------------------
+
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -81,11 +84,13 @@ h1, .h1 {
 @media (min-width: 1200px) {
   h1, .h1 {
     font-size: 2.5rem;
+    text-align: center;
   }
 }
 
 h2, .h2 {
   font-size: calc(1.325rem + 0.9vw);
+  text-align: center;
 }
 @media (min-width: 1200px) {
   h2, .h2 {
@@ -117,11 +122,46 @@ h5, .h5 {
 
 h6, .h6 {
   font-size: 1rem;
+  color:rgb(50,205,50)
+
+}
+
+.pendingText {
+  font-size: 1rem;
+  color:rgb(241, 179, 0);
+}
+
+.pendingTitle {
+  font-size: 1.25rem;
+  color:rgb(241, 179, 0);
+}
+
+.urgentText {
+  font-size: 1rem;
+  color:rgb(220,20,60);
+}
+
+.urgentTitle {
+  font-size: 1.25rem;
+  color:rgb(220,20,60)
+}
+
+.titleText {
+  font-size: 1.25rem;
+  text-align: center;
 }
 
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+}
+
+header {
+  margin-bottom: 1rem;
+  padding: 2rem 0;
+  background-color: rgb(0, 51, 102);
+  border-bottom: 4px solid rgb(241, 179, 0);
+  color: rgb(255, 255, 255);
 }
 
 abbr[title],
