--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,9 @@ body {
   header {
     margin-bottom: 4rem;
     padding: 2rem 0;
-    background-color: rgb(241, 179, 0);
-    border-bottom: 4px solid rgb(0, 51, 102);
-    color: rgb(0, 51, 102);
+    background-color: rgb(0, 51, 102);
+    border-bottom: 4px solid rgb(241, 179, 0);
+    color: rgb(241, 179, 0);
   }
   
   header p {
@@ -32,8 +32,8 @@ body {
     line-height: 1.25;
   }
   
-  h2, h3, h4 {
-    color: rgb(0, 51, 102);
+  h2 {
+    color: rgb(255, 255, 255);
   }
 
 button {
